@@ -2,6 +2,7 @@ Changes in Version 1.4.2
   o centrality_auto no longer outputs igraph messages to the console.
   o Added theme option "blackwhite"
   o Added 'negDashed' argument to make negative edges dashed.
+  o bootnet getWmat method now takes signed and weighted into account
 
 Changes in Version 1.4.1
   o Added 'curveScaleNodeCorrection' argument
